# Susu-Digital-SDKs

./: readme.md
docs/guide/: readme.md
docs/languages/go/: readme.md
docs/languages/java/: readme.md
docs/languages/javascript/: readme.md
docs/languages/php/: readme.md
docs/languages/python/: readme.md
go/: README.md  go.mod
go/susudigital/: analytics.go  analytics_test.go  batch.go  batch_test.go  client.go  client_test.go  config.go  customers.go  customers_test.go  errors.go  http_client.go  http_client_test.go  loans.go  loans_test.go  models.go  savings.go  savings_test.go  transactions.go  transactions_test.go  webhooks.go  webhooks_test.go
go/tests/: analytics_test.go  batch_test.go  client_test.go  customers_test.go  http_client_test.go  loans_test.go  savings_test.go  transactions_test.go  webhooks_test.go
javascript/: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  tsconfig.test.json  tsconfig.types.json
javascript/src/: batch.ts  client.ts  errors.ts  http.ts  index.ts  services.ts  types.ts  version.ts  webhooks.ts
javascript/tests/: batch.test.ts  client.test.ts  errors.test.ts  fixtures.ts  http.test.ts  services.test.ts  setup.ts  webhooks.test.ts
php/: .gitignore  .phpunit.result.cache  README.md  composer.json  junit.xml  phpunit.xml  phpunit_out.txt
php/src/: Batch.php  BatchProcessor.php  BatchResult.php  BatchResults.php  BatchServiceWrapper.php  SusuDigitalClient.php  Version.php  WebhookHandler.php
php/src/Exceptions/: AuthenticationException.php  NetworkException.php  NotFoundException.php  RateLimitException.php  ServerException.php  (+3 more)
python/: .coverage  .gitignore  README.md  pyproject.toml
python/src/susudigital/: __init__.py  _http.py  _version.py  async_client.py  async_services.py  batch.py  client.py  exceptions.py  services.py  types.py  webhooks.py
python/src/susudigital/contrib/: __init__.py
python/src/susudigital/contrib/django/: __init__.py  app.py  mixins.py  webhooks.py
python/src/susudigital_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/tests/: conftest.py  test_async_client.py  test_batch.py  test_client.py  test_exceptions.py  test_http.py  test_services.py  test_types.py  test_webhooks.py
(+39 files in other folders)
