[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "susudigital-python"
version = "2.0.5"
description = "Enterprise-Grade Python SDK for Susu Digital's microfinance platform"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Susu Digital", email = "sdk-support@susudigital.app" }]
keywords = ["susudigital", "microfinance", "fintech", "ghana", "sdk", "api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.2",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "respx>=0.20.2",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]
django = ["django>=3.2"]
async = ["anyio>=3.7.0"]

[project.urls]
Homepage = "https://developers.susudigital.app/python-sdk"
Documentation = "https://developers.susudigital.app/python-sdk"
Repository = "https://github.com/mmabiaa/Susu-digital-sdks"
"Bug Tracker" = "https://github.com/mmabiaa/Susu-digital-sdks/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"susudigital" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=susudigital --cov-report=term-missing --cov-fail-under=90"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.black]
line-length = 88
target-version = ["py38"]
